--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "ember-source": "^4.0.0"
   },
   "engines": {
-    "node": "16.* || >= 18"
+    "node": ">= 20"
   },
   "ember": {
     "edition": "octane"
