--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "string helpers",
     "strings"
   ],
+  "homepage": "https://github.com/adopted-ember-addons/ember-cli-string-helpers",
+  "bugs": "https://github.com/adopted-ember-addons/ember-cli-string-helpers/issues",
   "repository": "https://github.com/adopted-ember-addons/ember-cli-string-helpers",
   "license": "MIT",
   "author": "Lauren Tan <arr@sugarpirate.com>",
@@ -35,8 +37,6 @@
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each"
   },
-  "bugs": "https://github.com/adopted-ember-addons/ember-cli-string-helpers/issues",
-  "homepage": "https://github.com/adopted-ember-addons/ember-cli-string-helpers",
   "dependencies": {
     "@babel/core": "^7.25.2",
     "ember-cli-babel": "^8.2.0",
@@ -80,6 +80,7 @@
     "prettier": "^3.3.3",
     "qunit": "^2.22.0",
     "qunit-dom": "^3.2.1",
+    "release-plan": "^0.16.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
@@ -90,7 +91,8 @@
     "ember-source": ">= 3.28.0"
   },
   "engines": {
-    "node": ">= 20"
+    "node": ">= 20",
+    "pnpm": ">= 10"
   },
   "ember": {
     "edition": "octane"
