--- a/.npmrc
+++ b/.npmrc
@@ -14,6 +14,7 @@ resolve-peers-from-workspace-root=false
 peers-suffix-max-length=40
 dedupe-injected-deps=true
 dedupe-peer-dependents=true
+public-hoist-pattern[]=ember-cli
 public-hoist-pattern[]=ember-source
 sync-injected-deps-after-scripts[]=build
 sync-injected-deps-after-scripts[]=sync
