--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 auto-install-peers=false
 strict-peer-dependents=true
+verify-deps-before-run=install # always verify deps before running any scripts
