--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 auto-install-peers=false
+dedupe-peer-dependents=true
+resolution-mode=highest
 strict-peer-dependents=true
 verify-deps-before-run=install # always verify deps before running any scripts
